@@ -13,7 +13,7 @@ Also see https://github.com/MDAnalysis/mdanalysis/wiki/MDAnalysisTests
 and https://github.com/MDAnalysis/mdanalysis/wiki/UnitTests
 
 ------------------------------------------------------------------------------
-??/??/16 jbarnoud, orbeckst, fiona-naughton, manuel.nuno.melo
+??/??/16 jbarnoud, orbeckst, fiona-naughton, manuel.nuno.melo, richardjgowers
 
   * 0.15.1
     - test_imports now always uses the correct source directory (Issue #939).
@@ -25,6 +25,7 @@ and https://github.com/MDAnalysis/mdanalysis/wiki/UnitTests
     - install external packages on Travis (SETUP == full: HOLE, clustalw)
       to test additional analysis code (Issue #898)
     - add tests for new auxiliary module
+    - removed usage of random numbers from tests (Issue #958)
 
 05/15/16  orbeckst, jbarnoud, pedrishi, fiona-naughton, jdetle
   * 0.15.0
